--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="C:\Users\amsmc\Documents\portfolio\port.css">
+        <link rel="stylesheet" href="styles.css">
 
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
@@ -224,6 +224,6 @@
         <script src="https://unpkg.com/scrollreveal"></script>
 
         <!--===== MAIN JS =====-->
-        <script src="C:\Users\amsmc\Documents\portfolio\port.js"    ></script>
+        <script src="script.js"    ></script>
     </body>
 </html>
